# TryDefault

./: .gitignore  Cargo.toml  README.md
src/: default_not_found.rs  lib.rs  try_default.rs
