[package]
name = "try_default"
version = "1.0.1"
authors = ["Joseph Lenton <josephlenton@gmail.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/JosephLenton/TryDefault"
documentation = "https://docs.rs/axum-test/latest/TryDefault"
description = "A trait to optionally get the Default if present, or None if there is no Default."
keywords = ["try", "default"]

[dependencies]
